# aoc2020

./: CMakeLists.txt  README.md  setup
aoc/: CMakeLists.txt  day1.cxx
libs/: CMakeLists.txt
libs/catch/: CMakeLists.txt
libs/util/: CMakeLists.txt
libs/util/include/util/: BigInteger.h  string.h
libs/util/src/: BigInteger.cxx  util.cxx
libs/util/unit/: CMakeLists.txt  bigint.cxx  string.cxx
sandbox/: CMakeLists.txt  sandbox.cxx
